--- a/index.html
+++ b/index.html
@@ -7,63 +7,66 @@
 </head>
 
 <body>
-    <header>
-        <h1>Fruits Index</h1>
+    <header id="main-header">
+        <nav id="main-nav">
+            <div id="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <ul id="nav-items" class="hide-small">
+                <li><a href="https://aidanmacklen.github.io\projects\part5\home\index.html">Home</a></li>
+                <li><a href="https://aidanmacklen.github.io\projects\part5\portfolio\index.html">Portfolio</a></li>
+                <li><a href="https://aidanmacklen.github.io\projects\part5\about\index.html">About</a></li>
+                <li><a href="https://aidanmacklen.github.io\projects\part5\skills\index.html">Skills</a></li>
+                <li id="interactive-li"><a href="#interactive">Interactive</a></li>
+                <li><a href="https://aidanmacklen.github.io\projects\part5\contact\index.html">Contact</a></li>
+            </ul>
+        </nav>
         <hr>
-        <a href="#" id="addl">Add +</a>
     </header>
+    <a href="#" id="addl">Add +</a>
 
-    <div class="columns two-columns">
-        <div id="fruit-list" class="columns"></div>
-        <div id="fruit-information-column">
-            <h2>Information</h2>
-            <hr>
+    <main id="main-content">
+        <div class="columns two-columns">
+            <div id="jewel-list" class="columns"></div>
+            <div id="jewel-information-column">
+                <h2>Information</h2>
+                <hr>
 
-            <div id="fruit-information"></div>
+                <div id="jewel-information"></div>
+            </div>
         </div>
-    </div>
-    <div id="ae-fruit-container" class="box-text hide">
-        <span class="close">&times;</span>
+        <div id="ae-jewel-container" class="box-text hide">
 
-        <h3 id="ae-title">Fruit</h3>
-        <form id="ae-fruit-form" method="post">
-            <input type="hidden" name="_id" value="-1" />
-            <p>
-                <label for="name ">Fruit Name:</label>
-                <input type="text" id="name" name="name" required />
-            </p>
-            <p>
-                <label for="color">Color:</label>
-                <input type="text" id="color" name="color" required />
-            </p>
-            <p>
-                <label for="taste">Taste:</label>
-                <input type="text" id="taste" name="taste" required />
-            </p>
-            <p>
-                <label for="size">Size:</label>
-                <input type="text" id="size" name="size" required />
-            </p>
-            <p>
-                <label for="origin">Origin:</label>
-                <input type="text" id="origin" name="origin" required />
-            </p>
-
-            <p>
-                <label for="img">Upload Image:</label>
-                <input type="file" id="img" name="img" />
-            </p>
-
-            <p id="facts-p ">
-                <label class="inline">Facts:</label>
-                <a href="#" id="addf">Add Fact</a>
-                <section id="fact-boxes"></section>
-            </p>
-            <p>
-                <button type="submit">Submit</button>
-            </p>
-        </form>
-    </div>
+            <h3 id="ae-title">Jewel</h3>
+            <form id="ae-jewel-form" method="post">
+                <input type="hidden" name="_id" value="-1" />
+                <p>
+                    <label for="material">Jewel Material:</label>
+                    <input type="text" id="material" name="material" required />
+                </p>
+                <p>
+                    <label for="size">Size:</label>
+                    <input type="text" id="size" name="size" required />
+                </p>
+                <p>
+                    <label for="gem">Gem:</label>
+                    <input type="text" id="gem" name="gem" required />
+                </p>
+                <p>
+                    <label for="img">Upload Image:</label>
+                    <input type="file" id="img" name="img" />
+                </p>
+                <p>
+                    <button type="submit">Submit</button>
+                </p>
+            </form>
+        </div>
+    </main>
+    <footer id="main-footer">
+        <p>&copy; aidanmacklen.github.io</p>
+    </footer>
 </body>
 
 </html>
